RESOLVED FIXED 259811
AX: VoiceOver word echo doesn't work on text inputs with a combobox role
https://bugs.webkit.org/show_bug.cgi?id=259811
Summary AX: VoiceOver word echo doesn't work on text inputs with a combobox role
Tyler Wilcock
Reported 2023-08-03 18:23:20 PDT
...
Attachments
Patch (13.05 KB, patch)
2023-08-03 18:30 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-03 18:23:29 PDT
Tyler Wilcock
Comment 2 2023-08-03 18:26:16 PDT
Tyler Wilcock
Comment 3 2023-08-03 18:30:44 PDT
EWS
Comment 4 2023-08-03 21:23:51 PDT
Committed 266569@main (31a6df57125a): <https://commits.webkit.org/266569@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467197 [details].
Note You need to log in before you can comment on or make changes to this bug.