AX: VoiceOver word echo doesn't work on text inputs with a combobox role https://bugs.webkit.org/show_bug.cgi?id=259811 rdar://112488137

Reviewed by Chris Fleizach.

This happens because prior to this patch, we didn't expose the text
entry trait for comboboxes, despite comboboxes generally (but not
always) being a combination of a text input, plus a listbox of possible
options.

With this patch, when a text input has a role of combobox, we expose the
text entry trait.

* LayoutTests/accessibility/ios-simulator/combobox-is-editable-expected.txt: Added.
* LayoutTests/accessibility/ios-simulator/combobox-is-editable.html: Added.
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityTraits]):
* Tools/DumpRenderTree/AccessibilityUIElement.cpp:
(hasTextEntryTraitCallback):
(AccessibilityUIElement::getJSClass):
* Tools/DumpRenderTree/AccessibilityUIElement.h:
* Tools/DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::hasTextEntryTrait):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::hasTextEntryTrait):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::hasTextEntryTrait):

Canonical link: https://commits.webkit.org/266569@main